cabal-version:  >= 1.12
name:           zilog-emu
version:        0.1
build-type:     Simple
author:         B. Scott Michel
synopsis:       Z80 processor emulation

description:    emuwork's Z80 processor emulation, broken out as a separate library.
license:        GPL-3

library
  default-language:     Haskell2010

  build-depends:      
                        base,
                        time,
                        primitive,
                        filepath,
                        directory,
                        deepseq,
                        containers,
                        bytestring,
                        text,
                        vector,
                        old-locale,
                        lens,
                        transformers,
                        syb,
                        parsec,
                        emubase

  ghc-options:          -Wall -O2

  default-extensions:   GADTs,
                        MultiParamTypeClasses,
                        OverloadedStrings,
                        TemplateHaskell,
                        TypeSynonymInstances,
                        FlexibleInstances

  exposed-modules:
                        Z80,
                        Z80.MisosysEDAS

  other-modules:
                        Z80.InstructionSet,
                        Z80.InsnDecode,
                        Z80.Processor,
                        Z80.Disassembler,
                        Z80.DisasmOutput,
                        Z80.ParseAnalytic,
                        Z80.MisosysEDAS.Types,
                        Z80.MisosysEDAS.AsmPrettyPrinter,
                        Z80.MisosysEDAS.ParserUtils,
                        Z80.MisosysEDAS.Assembler,
                        Z80.MisosysEDAS.PseudoOpParser,
                        Z80.MisosysEDAS.MnemonicParser,
                        Z80.MisosysEDAS.ExprParser,
                        Z80.MisosysEDAS.Parser

executable edas-tests
  default-language:     Haskell2010
  hs-source-dirs:       Z80/MisosysEDAS/Tests
  Main-Is:              Harness.hs
  Build-Depends:        base >= 4,
                        containers >= 0.4,
                        bytestring >= 0.9,
                        text >= 0.11,
                        binary >= 0.5,
                        lens,
                        vector >= 0.10,
                        deepseq,
                        transformers,
                        parsec,
                        HUnit,
                        zilog-emu,
                        emubase
  ghc-options:          -Wall -O2
  default-extensions:   GADTs,
                        MultiParamTypeClasses,
                        OverloadedStrings,
                        TemplateHaskell,
                        TypeSynonymInstances,
                        FlexibleInstances

executable edas-pptest
  default-language:     Haskell2010
  hs-source-dirs:       Z80/MisosysEDAS/Tests
  Main-Is:              PrettyPrint.hs
  Build-Depends:        base >= 4,
                        containers >= 0.4,
                        bytestring >= 0.9,
                        text >= 0.11,
                        binary >= 0.5,
                        lens,
                        vector >= 0.10,
                        deepseq,
                        transformers,
                        parsec,
                        zilog-emu,
                        emubase
  ghc-options:          -Wall -O2
  default-extensions:   GADTs,
                        MultiParamTypeClasses,
                        OverloadedStrings,
                        TemplateHaskell,
                        TypeSynonymInstances,
                        FlexibleInstances
