cabal-version:  >= 1.12
name:           zilog-emu
version:        0.1
build-type:     Simple
author:         B. Scott Michel
synopsis:       Z80 processor emulation

description:    emuwork's Z80 processor emulation, broken out as a separate library.
license:        GPL-3

library
  default-language:     Haskell2010

  build-depends:
    base,
    time,
    primitive,
    filepath,
    directory,
    deepseq,
    containers,
    bytestring,
    text,
    vector,
    old-locale,
    lens,
    transformers,
    syb,
    parsec,
    unordered-containers,
    comonad,
    emubase

  ghc-options:          -Wall -O2

  default-extensions:
   GADTs,
   MultiParamTypeClasses,
   OverloadedStrings,
   TemplateHaskell,
   TypeSynonymInstances,
   RankNTypes,
   FlexibleInstances

  exposed-modules:
    Z80

  other-modules:
    Z80.InstructionSet,
    Z80.InsnDecode,
    Z80.Processor,
    Z80.Disassembler,
    Z80.DisasmOutput,
    Z80.ParseAnalytic
